Fix build scripts and add compiled html pages.

--- a/htmlgen/templates/partials/header.html
+++ b/htmlgen/templates/partials/header.html
@@ -1,5 +1,5 @@
 <header class="profile col-gap-2">
-    <img src="images/avatar.jpg" alt="Karolis Strazdas" class="avatar">
+    <img src="images/avatar.webp" alt="Karolis Strazdas" class="avatar">
     <section class="flex column row-gap-1">
         <h1>Karolis Strazdas</h1>
         <h2>Programmer at Indeform Ltd.</h2>
