Update header styling, make focused nav links distinguishable on tab focus.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
 
 :root {
     --text-color-dark: #e4ae00;
-    --text-color-light: #494b49;
+    --text-color-light: #414241;
     --background-color-dark: #121524;
     --background-color-light: #ebeef2;
     --transition-duration: 0ms;
@@ -15,12 +15,12 @@ body {
     min-width: 46.875rem;
     max-width: 56.5625rem;
     box-sizing: border-box;
+    scrollbar-gutter: stable;
     font-family: 'Fira Code', sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-size: clamp(3rem, 10vw, 4rem) clamp(3rem, 10vw, 4rem);
-    scrollbar-gutter: stable;
 }
 
 body {
@@ -57,9 +57,9 @@ h1 {
 }
 
 header h1 {
-    font-weight: 300;
+    font-weight: 600;
     line-height: 1em;
-    font-size: clamp(2.5rem, 5vw, 3.5rem);
+    font-size: clamp(2rem, 5vw, 2.5rem);
 }
 
 header h2 {
@@ -80,6 +80,11 @@ header h3 {
     column-gap: 1.5rem;
     align-items: center;
     margin-top: 5.25rem;
+}
+
+.profile .profile-location span {
+    display: inline-block;
+    vertical-align: middle;
 }
 
 /* Icons */
@@ -203,9 +208,11 @@ header h3 {
 }
 
 .avatar {
-    border-radius: 50%;
     width: 7.8125rem;
     height: 7.8125rem;
+    border-width: 1px;
+    border-radius: 0.375rem;
+    border: 1px solid #2f2f2f5f;
 }
 
 @media screen and (max-width: 64em) {
@@ -220,10 +227,6 @@ header h3 {
         align-self: center;
         align-items: center;
         flex-direction: column;
-    }
-
-    .profile .profile-location span {
-        display: block;
     }
 
     .tabs {
@@ -259,13 +262,6 @@ article p.quote {
     }
 }
 
-@media (max-width: 18.75em) {
-
-    .tab {
-        text-align: left;
-    }
-}
-
 main {
     flex: 1;
 }
@@ -292,8 +288,9 @@ main section article .technologies {
 }
 
 main section article .technologies span {
-    border-width: 0.0625rem;
+    cursor: default;
     border-style: solid;
+    border-width: 0.0625rem;
     border-radius: 0.375rem;
     padding: 0.25rem 0.5rem;
     transition: color var(--transition-duration) ease-in-out, background-color var(--transition-duration) ease-in-out;
@@ -331,6 +328,14 @@ main section article .technologies span {
 
 .theme.dark .theme-switcher {
     background-image: url("../images/icons/theme-dark.svg");
+}
+
+.theme.light .avatar {
+    border-color: color-mix(in srgb, var(--text-color-light), transparent 25%);
+}
+
+.theme.dark .avatar {
+    border-color: color-mix(in srgb, var(--text-color-dark), transparent 25%);
 }
 
 .theme.light main section article,
@@ -406,11 +411,13 @@ main section article .technologies span {
     color: var(--background-color-dark);
 }
 
-.theme.light .tab:hover {
+.theme.light .tab a:hover,
+.theme.light .tab a:focus {
     background-color: color-mix(in srgb, var(--text-color-light), transparent 75%);
 }
 
-.theme.dark .tab:hover {
+.theme.dark .tab a:hover,
+.theme.dark .tab a:focus {
     background-color: color-mix(in srgb, var(--text-color-dark), transparent 75%);
 }
 
