--- a/htmlgen/templates/partials/header.html
+++ b/htmlgen/templates/partials/header.html
@@ -6,8 +6,7 @@
 
         <div class="profile-location flex col-gap-1">
             <div class="flex row-center-y">
-                <span class="icon location medium"></span>
-                <h3>Kaunas, Lithuania</h3>
+                <h3><span class="icon location medium"></span>Kaunas, Lithuania</h3>
             </div>
 
             <div class="flex col-gap-1">
