--- a/htmlgen/templates/partials/layout.html
+++ b/htmlgen/templates/partials/layout.html
@@ -54,7 +54,7 @@
     <%include file="header.html" />
     <%include file="navigation.html" />
     <main>${self.body()}</main>
-
+    <canvas id="background"></canvas>
     <script src="js/main.js"></script>
 </body>
 
