--- a/htmlgen/templates/partials/section.html
+++ b/htmlgen/templates/partials/section.html
@@ -16,7 +16,17 @@
             </div>
 
             <hr>
-            <h3>${item["title"]}</h3>
+
+            %if "title_link" in item:
+                <h3><a href="${item['title_link']}" target="_blank" class="link bordered">${item["title"]}</a>
+                %if "subtitle" in item:
+                    - ${item["subtitle"]}
+                %endif
+                </h3>
+            %else:
+                <h3>${item["title"]}</h3>
+            %endif
+
             <div>${item["description"]}</div>
             <hr>
 
