--- a/htmlgen/templates/pages/index.html
+++ b/htmlgen/templates/pages/index.html
@@ -11,7 +11,13 @@
         <b> Reading: </b>
         <ul>
             %for item in reading:
-                <li> <a class="link bordered" href="${item['link']}" target="_blank">${item['title']};</a></li>
+                <li>
+                    %if "link" in item:
+                        <a class="link bordered" href="${item['link']}" target="_blank">${item['title']};</a>
+                    %else:
+                        ${item['title']};
+                    %endif
+                </li>
             %endfor
         </ul>
 
