--- a/htmlgen/templates/partials/header.html
+++ b/htmlgen/templates/partials/header.html
@@ -1,12 +1,12 @@
 <header class="profile col-gap-2">
-    <img src="images/avatar.webp" alt="Karolis Strazdas" class="avatar">
+    <img src="images/avatar.webp" alt="${personal['name']}" class="avatar">
     <section class="flex column row-gap-1">
-        <h1>Karolis Strazdas</h1>
-        <h2>Programmer at Indeform Ltd.</h2>
+        <h1>${personal['name']}</h1>
+        <h2>${position['name']} at ${position['company']}.</h2>
 
         <div class="profile-location flex col-gap-1">
             <div class="flex row-center-y">
-                <h3><span class="icon location medium"></span>Kaunas, Lithuania</h3>
+                <h3><span class="icon location medium"></span>${personal['location']}</h3>
             </div>
 
             <div class="flex col-gap-1">
@@ -15,7 +15,7 @@
                     <span class="icon medium interactive linkedin"></span>
                 </a>
 
-                <a href="https://www.github.com/Eoic" target="_blank" aria-label="Explore my side project at GitHub">
+                <a href="https://www.github.com/Eoic" target="_blank" aria-label="Explore my side projects at GitHub">
                     <span class="icon medium interactive github"></span>
                 </a>
 
