--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -542,17 +542,7 @@ a.link {
 
 a.link.bordered {
     position: relative;
-
-    &::after {
-        content: '';
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        height: 1px;
-        display: block;
-        position: absolute;
-        background-color: currentColor;
-    }
+    border-bottom: 1px solid currentColor;
 }
 
 p.info {
