feat: Update project details and enhance SEO
- Updated meta description and keywords in projects.html for better SEO.
- Added OpenGraph and Twitter Card metadata for improved social sharing.
- Introduced robots.txt to manage web crawler access.
- Updated sitemap.xml with new last modified dates.
- Implemented service worker (sw.js) for content caching.
- Enhanced about, education, positions, and projects context with new descriptions and links.
- Add pre-commit hook script to compile newest HTML form templates before commiting.
- Updated package version to 1.7.1 and adjusted build scripts for service worker versioning.
- Improved accessibility and semantic HTML in navigation and header templates.

--- a/htmlgen/templates/pages/index.html
+++ b/htmlgen/templates/pages/index.html
@@ -4,7 +4,7 @@
     <article>
         <div><b> Description </b></div>
         <hr>
-        <p class="info">${description}</p>
+        <p class="info">${content_description}</p>
     </article>
     <article>
         <div class="flex row-center-y col-gap-1">
@@ -13,13 +13,13 @@
         </div>
         <ul>
             %for item in reading:
-                <li>
-                    %if "link" in item:
-                        <a class="link bordered" href="${item['link']}" target="_blank">${item['title']};</a>
-                    %else:
-                        <span>${item['title']}</span> &mdash; <em>${item['author']}</em>;
-                    %endif
-                </li>
+            <li>
+                %if "link" in item:
+                <a class="link bordered" href="${item['link']}" target="_blank">${item['title']};</a>
+                %else:
+                <span>${item['title']}</span> &mdash; <em>${item['author']}</em>;
+                %endif
+            </li>
             %endfor
         </ul>
         <div class="flex row-center-y col-gap-1 mt-1">
@@ -28,7 +28,7 @@
         </div>
         <ul>
             %for item in learning_about:
-                <li> ${item}; </li>
+            <li> ${item}; </li>
             %endfor
         </ul>
 
@@ -38,10 +38,10 @@
         </div>
         <ul>
             %for item in working_on:
-                <li>
-                    <a class="link bordered" href="${item['link']}" target="_blank">${item['title']}</a>
-                    - ${item['subtitle']};
-                </li>
+            <li>
+                <a class="link bordered" href="${item['link']}" target="_blank">${item['title']}</a>
+                - ${item['subtitle']};
+            </li>
             %endfor
         </ul>
     </article>
