--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,7 +61,6 @@ hr {
 }
 
 @media (max-width: 48em) {
-
     html,
     body {
         width: 100%;
@@ -153,10 +152,6 @@ header h3 {
     background-image: url(../images/icons/learn.svg);
 }
 
-.icon.interactive {
-    transition: filter var(--transition-duration) ease-in-out;
-}
-
 .icon.medium {
     min-width: 1.75rem;
     max-width: 1.75rem;
@@ -173,7 +168,7 @@ header h3 {
     overflow-x: hidden;
 }
 
-.tab-navigator [type="radio"] {
+.tab-navigator [type='radio'] {
     display: none;
 }
 
@@ -196,7 +191,6 @@ header h3 {
     text-overflow: ellipsis;
     font-size: clamp(1.125rem, 5vw - 1rem, 1.625rem);
     letter-spacing: 0.01em;
-    transition: background-color var(--transition-duration) ease-in-out, color var(--transition-duration) ease-in-out;
 }
 
 .tab a {
@@ -214,11 +208,11 @@ header h3 {
     border-bottom-style: solid;
 }
 
-.tab:first-child>label {
+.tab:first-child > label {
     border-radius: 0.375rem 0 0 0.375rem;
 }
 
-.tab:last-child>label {
+.tab:last-child > label {
     border-radius: 0 0.375rem 0.375rem 0;
 }
 
@@ -266,7 +260,6 @@ header h3 {
 }
 
 @media screen and (max-width: 64em) {
-
     .profile {
         text-align: center;
         flex-direction: column;
@@ -283,7 +276,7 @@ header h3 {
         flex-direction: column;
     }
 
-    .tab:first-child>label {
+    .tab:first-child > label {
         border-radius: 0;
     }
 
@@ -295,7 +288,7 @@ header h3 {
         border-bottom-width: 0.0625rem;
     }
 
-    .tab:last-child>label {
+    .tab:last-child > label {
         border-radius: 0;
     }
 }
@@ -367,7 +360,6 @@ main section article {
     border-width: 1px;
     border-style: solid;
     border-radius: 0.375em;
-    transition: border-color var(--transition-duration) ease-in-out;
 }
 
 main section article ul {
@@ -395,7 +387,6 @@ main section article .technologies span {
     font-size: 0.875rem;
     font-weight: 500;
     letter-spacing: 0.01em;
-    transition: color var(--transition-duration) ease-in-out, background-color var(--transition-duration) ease-in-out, border-color var(--transition-duration) ease-in-out;
 }
 
 main section article .technologies span:hover {
@@ -421,11 +412,11 @@ main section article .technologies span:hover {
 }
 
 .theme.light .theme-switcher {
-    background-image: url("../images/icons/theme-light.svg");
+    background-image: url('../images/icons/theme-light.svg');
 }
 
 .theme.dark .theme-switcher {
-    background-image: url("../images/icons/theme-dark.svg");
+    background-image: url('../images/icons/theme-dark.svg');
 }
 
 .theme.light .avatar {
@@ -594,7 +585,7 @@ main section article .technologies span:hover {
 /* Other. */
 @keyframes sway {
     from {
-        transform: rotate(0deg)
+        transform: rotate(0deg);
     }
 
     50% {
@@ -602,11 +593,11 @@ main section article .technologies span:hover {
     }
 
     to {
-        transform: rotate(0deg)
+        transform: rotate(0deg);
     }
 }
 
-section>p {
+section > p {
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -619,7 +610,6 @@ a.link {
     padding-right: 0.45em;
     display: inline-block;
     color: var(--accent-color-dark);
-    transition: background-color var(--transition-duration) ease-in-out, color var(--transition-duration) ease-in-out;
 }
 
 a.link:hover {
