--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 /* General */
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lekton:wght@300..700&display=swap');
 
 :root {
     --text-color-dark: #ffb000;
@@ -19,7 +19,7 @@ body {
     max-width: 60rem;
     box-sizing: border-box;
     scrollbar-gutter: stable;
-    font-family: 'Fira Code', monospace;
+    font-family: 'Lekton', monospace;
     font-weight: 400;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -177,7 +177,6 @@ header h3 {
     display: flex;
     overflow: auto;
     list-style: none;
-    border-radius: 0.375rem;
     align-items: stretch;
 }
 
@@ -208,18 +207,9 @@ header h3 {
     border-bottom-style: solid;
 }
 
-.tab:first-child > label {
-    border-radius: 0.375rem 0 0 0.375rem;
-}
-
-.tab:last-child > label {
-    border-radius: 0 0.375rem 0.375rem 0;
-}
-
 .tab-content {
     padding: 0.75rem;
     display: none;
-    border-radius: 0.375rem;
 }
 
 /* Formatting */
@@ -255,7 +245,6 @@ header h3 {
     width: 7.8125rem;
     height: 7.8125rem;
     border-width: 1px;
-    border-radius: 0.375rem;
     border: 1px solid #2f2f2f5f;
 }
 
@@ -359,7 +348,6 @@ main section article {
     padding: 1.5em;
     border-width: 1px;
     border-style: solid;
-    border-radius: 0.375em;
 }
 
 main section article ul {
@@ -382,7 +370,6 @@ main section article .technologies span {
     cursor: default;
     border-style: solid;
     border-width: 1px;
-    border-radius: 0.375em;
     padding: 0.25em 0.75em;
     font-size: 0.875rem;
     font-weight: 500;
@@ -417,6 +404,16 @@ main section article .technologies span:hover {
 
 .theme.dark .theme-switcher {
     background-image: url('../images/icons/theme-dark.svg');
+}
+
+.theme.dark *::selection {
+    color: var(--background-color-dark);
+    background-color: var(--text-color-dark);
+}
+
+.theme.light *::selection {
+    color: var(--background-color-light);
+    background-color: var(--text-color-light);
 }
 
 .theme.light .avatar {
@@ -604,10 +601,8 @@ section > p {
 
 /* Links */
 a.link {
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    padding-left: 0.45em;
-    padding-right: 0.45em;
+    padding-left: 0.25em;
+    padding-right: 0.25em;
     display: inline-block;
     color: var(--accent-color-dark);
 }
